gateways/gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway: {}
    # virtualServiceSelector:
    #   app: httpbin
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          path: /dev/stdout
          stringFormat: ""
  proxyNames:
  - gateway-proxy
  ssl: false
  useProxyProto: false
